# desafio-spotify

./: .coverage  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  auth.py  forms.py  models.py  urls.py  views.py
core/classes/: Playlist.py  playlist.py  track.py
core/migrations/: 0001_initial.py  0002_auto_20210522_1633.py  0003_spotify_client.py  0004_playlist.py  0005_auto_20210526_1150.py  0006_auto_20210526_1307.py  0007_auto_20210526_1312.py  0008_clienttoken.py  0009_auto_20210528_0827.py  0010_accesstokenscoped.py
core/static/css/: estilos.css
core/static/js/: js.js
core/templates/: add_item_playlist.html  add_item_playlist_2.html  add_success.html  add_user.html  contact.html  contato.html  del_success.html  footer.html  head.html  index.html  login.html  navbar.html  spotify.html
django1/: .env  settings.py  urls.py
tests/: test_views.py
